--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wakfu Deck Builder</title>
+    <script>
+      // Initialisation immédiate du thème pour éviter le FOUC (Flash of Unstyled Content)
+      (function() {
+        const savedTheme = localStorage.getItem('wakfu-theme') || 'light';
+        document.documentElement.setAttribute('data-theme', savedTheme);
+      })();
+    </script>
+    <style>
+      /* CSS de base pour éviter l'interface blanche avant le chargement */
+      html {
+        background-color: #ffffff; /* Blanc par défaut (thème light) */
+      }
+      html[data-theme="dark"] {
+        background-color: #1d232a; /* Sombre pour thème dark */
+      }
+      body {
+        min-height: 100vh;
+        margin: 0;
+      }
+      #app {
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body class="bg-base-100">
     <div id="app"></div>
